# libviewer

./: CMakeLists.txt  README.md
include/: Atlas.h  Camera.h  GameObject.h  Input.h  Mesh.h  OrthographicCamera.h  PerspectiveCamera.h  Scene.h  Shader.h  ShaderProgram.h  Texture.h  Transform.h  VertexBuffer.h
src/: Atlas.cpp  Camera.cpp  GameObject.cpp  Input.cpp  Mesh.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Transform.cpp  VertexBuffer.cpp
test/: main.cpp
test/shaders/: fragment.glsl  vertex.glsl
test/textures/: tile.dds
